--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,471 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Birthstone&display=swap');
+body {
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+    --primary-white: #fff;
+    --primary-orange: rgb(228, 90, 27);
+    --primary-orange-op:rgba(228, 91, 27, 0.493); ;
+    --primary-black: rgba(256, 256, 256, 0);
+    --second-black: rgb(256, 256, 256);
+    --primary-light-gray: #f4f4f4;
+    --primary-gray: #ccd1d9;
+    --primary-dark-gray: #666666;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.general-wrapper {
+    background-color: black;
+    color: var(--primary-white);
+    /* font-weight: bold; */
+    font-size: 20px;
+    width: 100%;
+    height: auto;
+    padding: 50px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.headlineh3 {
+    max-width: 200px;
+    border-bottom: solid var(--primary-orange) 5px;
+    padding-bottom: 14px;
+    margin-bottom: 50px;
+    text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+/* -------------------------------Navbar----------------- */
+
+.logo {
+    text-decoration: none;
+    font-size: 2.3rem;
+    color: var(--primary-white);
+    font-family: 'Birthstone', cursive;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo:hover {
+    color: var(--primary-orange)
+}
+
+.navbar {
+    background-color: rgb(0, 0, 0);
+}
+
+.navbar-toggler {
+    border: solid .187rem var(--primary-black);
+}
+
+.navbar-toggler:hover {
+    border: solid .187rem var(--primary-orange);
+}
+
+.faBars {
+    color: var(--primary-orange)
+}
+
+/* -------------------------------Navbar Links----------------- */
+
+nav a.nav-link {
+    font-weight: bold;
+    letter-spacing: .037rem;
+    text-transform: uppercase;
+    margin-right: 0.37rem;
+    margin-left: 0.37rem;
+    border: solid .187rem var(--primary-black);
+    cursor: pointer;
+}
+
+.navbar-nav>li>a {
+    color: var(--primary-white)!important
+}
+
+.navbar-nav>li>a:visited {
+    border-bottom: solid .187rem var(--primary-orange) !important;
+}
+
+.navbar-nav>li>a:hover {
+    border-bottom: solid .187rem var(--primary-orange);
+}
+
+.milulLogo {
+    background-image: url('./assets//logo.jpeg');
+    color: #fff;
+}
+
+/* ----------------------------Header------------------ */
+
+.header-wraper {
+    position: relative;
+    background-color: rgb(0, 0, 0);
+    height: 90vh;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+    background-image: url('./assets/header1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.devPic {
+    width: 50%;
+    height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.devPic .milulImg {
+    position: relative;
+    width: 650px;
+    height: 600px;
+    border: solid var(--primary-orange) 5px;
+    background-color: var(--primary-black);
+    background-image: url("./assets/devPic.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: black;
+}
+
+.devPic .milulImg::after {
+    content: "";
+    background-color: rgba(0, 0, 0, 0.541);
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.main-info {
+    width: 50%;
+    height: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-info h1 {
+    color: var(--primary-orange);
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 50px;
+}
+
+.typed {
+    color: var(--primary-white);
+    font-size: 30px;
+}
+
+/* -------------------------Services----------------------- */
+
+.cart-wraper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-flow: wrap;
+    position: relative;
+    width: 100%;
+}
+
+.cart-body {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-flow: wrap;
+    width: 30%;
+    height: 200px;
+    margin: 10px;
+    padding: 3px;
+    border-bottom: solid var(--primary-orange) 3px;
+    cursor: pointer;
+}
+
+.cart-body:hover .skill-p {
+    display: inline;
+}
+
+.cart-body:hover .skill-img-wrapper {
+    display: none;
+}
+
+.skill-p {
+    display: none;
+    font-size: 15px;
+}
+
+.skill-img-wrapper {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+}
+
+.skill-img {
+    width: 40px;
+    height: 40px;
+    margin: 6px;
+}
+
+/* -------------------------experience----------------------- */
+
+.experience-wrapper {
+    position: relative;
+    padding: 3.125rem;
+    overflow: hidden;
+}
+
+.experience-wrapper::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 50%;
+    width: 0.125rem;
+    height: 100%;
+    padding-left: -0.0625rem;
+    background: var(--primary-gray);
+    z-index: 1;
+}
+
+.timeline-block {
+    display: flex;
+    justify-content: space-between;
+    width: calc(50% + 0.5rem);
+    clear: both;
+}
+
+.timeline-block-right {
+    float: right;
+}
+
+.timeline-block-left {
+    float: left;
+    direction: rtl;
+}
+
+.marker {
+    width: 1rem;
+    height: 1rem;
+    background-color: black;
+    border-radius: 50%;
+    border: 0.3125rem solid var(--primary-orange);
+    margin-top: 0.625rem;
+    z-index: 3;
+}
+
+.timeline-content {
+    width: 95%;
+    padding: 0 0.9375rem;
+    direction: ltr
+}
+
+.timeline-content h3 {
+    color: var(--primary-orange);
+}
+
+/* -------------------------Portfolio----------------------- */
+
+.portfolio-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    cursor: pointer;
+}
+
+.portfolio-pic-wrapper {
+    position: relative;
+    margin: 1rem;
+    border-bottom: solid var(--primary-orange) 3px;
+}
+
+.portfolio-image {
+    width: 20rem;
+    height: 20rem;
+}
+
+.profile-image-cover {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    position: absolute;
+    background-color: black;
+}
+
+.portfolio-pic-wrapper:hover .profile-image-cover {
+    opacity: 60%;
+    transition: 0.3s ease-in-out;
+}
+
+/* -------------------------popupbox----------------------- */
+
+.popup-wrapper {
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.portfolio-image-popbox {
+    width: 40rem;
+    padding: 1rem;
+}
+
+.portfolio-popup-p {
+    width: 40rem;
+}
+
+.hyper-link {
+    text-decoration: none;
+    color: white
+}
+
+.hyper-link:hover {
+    text-decoration: none;
+    color: var(--primary-orange)
+}
+
+/* -------------------------Teseminial----------------------- */
+
+.testemonila-content {
+    text-align: center;
+    max-width: 42rem;
+    margin: 0 auto 2rem auto;
+    /* background-color: gray; */
+}
+
+.Testimonial-headlineh3 {
+    max-width: 100px;
+    border-left: solid var(--primary-orange) 5px;
+    /* background-color: white; */
+    font-size: 1.5rem;
+}
+
+.slide img {
+    width: 15rem !important;
+    border-radius: 10rem;
+}
+
+/* -------------------------contact me----------------------- */
+
+.input-col {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact input, .contact textarea {
+    width:100%;
+    background: none;
+    box-sizing: border-box;
+    resize: none;
+    border: 0;
+    border-bottom: solid var(--primary-orange-op) 1px;
+    color: white;
+    border-radius: 0;
+    outline: 0 !important;
+   box-shadow: none !important;
+   margin-bottom: 1rem;
+   
+}
+.contact textarea{
+    height: 13.3rem;
+}
+.contact{
+    padding: 2rem ;
+}
+.contact input:focus, .contact textarea:focus{
+    background: transparent;
+    color:  white;
+    /* border-bottom: solid var(--primary-orange) 1px; */
+    border-bottom: none;
+} 
+.contact button{
+    width: 100%;
+    border: solid var(--primary-orange) 1px;
+    background: none;
+    color: white;
+    padding: .5rem 0;
+    transition: 0.2s ease-in-out;
+
+}
+.contact button:hover{
+    background: var(--primary-orange);
+}
+
+
+.line{
+    position: relative;
+    top:-0.9rem;
+
+    background: var(--primary-orange);
+    width: 0;
+    height: 0.125rem;
+    display: inline-block;
+}
+
+input:focus+.line, textarea:focus+.line{
+    width: 100%;
+    transition: width 0.5s;
+}
+input.form-control, textarea.form-control{
+    margin: -0.3rem 0; 
+}
+/* -------------------------mobile and tablet mode----------------------- */
+
+@media only screen and (max-width: 1023px) {
+    .navbar-nav>li>a {
+        display: flex;
+        justify-content: center;
+    }
+    .header-wraper {
+        position: relative;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+    }
+    .main-info {
+        margin-top: 1rem;
+    }
+    .cart-body {
+        width: 42rem;
+        height: 30rem;
+    }
+    .experience-wrapper {
+        padding: 0
+    }
+    .experience-wrapper::before {
+        left: 1%
+    }
+    .timeline-block {
+        width: 100%;
+    }
+    .timeline-block-right {
+        float: none;
+    }
+    .timeline-block-left {
+        float: none;
+        direction: ltr
+    }
+    .portfolio-pic-wrapper {
+        width: 42rem;
+    }
+    .portfolio-image {
+        width: 42rem;
+        height: auto;
+    }
+
 }
