--- a/src/App.css
+++ b/src/App.css
@@ -120,7 +120,7 @@ nav a.nav-link {
     height: 600px;
     border: solid var(--primary-orange) 5px;
     background-color: var(--primary-black);
-    background-image: url("./assets/devPic.png");
+    background-image: url("./assets/milad.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-color: black;
